--- a/_tmux.conf
+++ b/_tmux.conf
@@ -14,8 +14,8 @@ bind-key -t vi-copy 'y' copy-selection
 bind C-y run "tmux save-buffer - | xclip -selection c"\; display-message "Buffer copied to clipboard"
 
 set -g default-terminal "screen-256color"
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
+#set -g default-command /bin/zsh
+#set -g default-shell /bin/zsh
 
 set-option -g mouse-select-pane on
 
