--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,129 @@
-_vim/bundle
-_vim/tmp
+# Files that might appear on external disk #
+.Spotlight-V100
+.Trashes
+
+# Linux
+*~
+*.sw[a-p]
+
+# Compiled source #
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+# It's better to unpack these files and commit the raw source because
+# git has its own built in compression methods.
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.tar.gz
+*.zip
+*.bzip
+
+# Logs and databases #
+*.log
+*.sql
+*.sqlite
+# xmonad stuff
+xmonad/*
+!xmonad/xmonad.hs
+
+# Vim #
+*.swp
+*.swo
+.*.sw[a-z]
+*.un~
+_vim/tmp/
+_vim/bundle/
+
+# Emacs #
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+.elc
+auto-save-list
+tramp
+
+# etags/ctags #
+TAGS
+tags
+
+# Automake #
+# http://www.gnu.org/software/automake
+
+Makefile.in
+
+# http://www.gnu.org/software/autoconf
+
+/autom4te.cache
+/aclocal.m4
+/compile
+/configure
+/depcomp
+/install-sh
+/missing
+
+# CMake #
+CMakeCache.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+install_manifest.txt
+
+# C/C++ #
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+
+# LaTeX #
+*.aux
+*.bbl
+*.blg
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.log
+*.out
+*.toc
+*.fdb_latexmk
+*.pdfsync
+*.synctex.gz
+*.nav
+*.snm
+*.vrb
+
+# Node #
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
