finally fixed the tmux copy problem

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -9,9 +9,8 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
 
-bind C-y run "tmux save-buffer - | xclip -selection c"\; display-message "Buffer copied to clipboard"
 
 set -g default-terminal "screen-256color"
 #set -g default-command /bin/zsh
