--- a/_tmux.conf
+++ b/_tmux.conf
@@ -13,10 +13,11 @@ bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
 
 
 set -g default-terminal "screen-256color"
+#set -g default-terminal "xterm"
 #set -g default-command /bin/zsh
 #set -g default-shell /bin/zsh
 
-set-option -g mouse-select-pane on
+#set-option -g mouse-select-pane on
 
 # Set status bar
  set -g status-bg black
@@ -54,8 +55,9 @@ bind-key a send-prefix
 # Highlight active window
 set-window-option -g window-status-current-bg red
 # mouse scroll
-set-window-option -g mode-mouse on
-set -g terminal-overrides "xterm*:smcup@:rmcup@:*88col*:colors=88,*256col*:colors=256,xterm*:colors=256"
+#set-window-option -g mode-mouse on
+#set -ga terminal-overrides "xterm*:smcup@:rmcup@:*88col*:colors=88,*256col*:colors=256,xterm*:colors=256"
+set -ga terminal-overrides "screen-256color"
 #
 #### COLOUR (Solarized 256)
 
@@ -88,3 +90,13 @@ set-option -g display-panes-colour colour166 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
+
+# tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind C-l send-keys 'C-l'
