--- a/_tmux.conf
+++ b/_tmux.conf
@@ -8,9 +8,12 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
 
+set-option -g history-limit 50000
 
 set -g default-terminal "screen-256color"
 #set -g default-terminal "xterm"
@@ -55,7 +58,7 @@ bind-key a send-prefix
 # Highlight active window
 set-window-option -g window-status-current-bg red
 # mouse scroll
-#set-window-option -g mode-mouse on
+# set-window-option -g mode-mouse on
 #set -ga terminal-overrides "xterm*:smcup@:rmcup@:*88col*:colors=88,*256col*:colors=256,xterm*:colors=256"
 set -ga terminal-overrides "screen-256color"
 #
