change completion engine, fix tmux

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -10,8 +10,8 @@ unbind p
 bind p paste-buffer
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -i -f -selection primary | xclip -i -selection clipboard'
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 
 set-option -g history-limit 50000
 
