--- a/_tmux.conf
+++ b/_tmux.conf
@@ -11,6 +11,8 @@ bind p paste-buffer
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -i -f -selection primary | xclip -i -selection clipboard'
+# bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 
 set-option -g history-limit 50000
@@ -20,7 +22,17 @@ set -g default-terminal "screen-256color"
 #set -g default-command /bin/zsh
 #set -g default-shell /bin/zsh
 
-#set-option -g mouse-select-pane on
+set-option -g mouse on
+unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
+bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+
+
+# Middle click to paste from the clipboard
+unbind-key MouseDown2Pane
+bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+# Drag to re-order windows
+bind-key -n MouseDrag1Status swap-window -t=
 
 # Set status bar
  set -g status-bg black
