--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,10 +10,10 @@ unbind p
 bind p paste-buffer
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -i -f -selection primary | xclip -i -selection clipboard'
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "kitty +kitten clipboard"
 # bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+#bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 
 set-option -g history-limit 50000
 
@@ -23,8 +23,8 @@ set -g default-terminal "screen-256color"
 #set -g default-shell /bin/zsh
 
 set-option -g mouse on
-unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
-bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+#unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
+#bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
 
 
 # Middle click to paste from the clipboard
@@ -68,7 +68,7 @@ bind-key a send-prefix
 #set -g status-right "#[fg=yellow]#(uptime | cut -d ',' -f 2-)"
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
+# set-window-option -g window-status-current-bg red
 # mouse scroll
 # set-window-option -g mode-mouse on
 #set -ga terminal-overrides "xterm*:smcup@:rmcup@:*88col*:colors=88,*256col*:colors=256,xterm*:colors=256"
@@ -79,25 +79,25 @@ set -ga terminal-overrides "screen-256color"
 # default statusbar colors
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+# set-option -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
+#set-window-option -g window-status-fg colour244 #base0
+#set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-fg colour166 #orange
+#set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+#set-option -g pane-border-fg colour235 #base02
+#set-option -g pane-active-border-fg colour240 #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+#set-option -g message-bg colour235 #base02
+#set-option -g message-fg colour166 #orange
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
@@ -113,5 +113,5 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind C-l send-keys 'C-l'
