--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,103 +1,37 @@
-# C-b is not acceptable -- Vim uses it
 unbind C-b
-set -g prefix C-space
+unbind -T copy-mode-vi Space; #Default for begin-selection
+unbind -T copy-mode-vi Enter; #Default for copy-selection
+
+set -g mouse on
+set -g prefix C-Space
+set-option -g focus-events on
+set-option -sg escape-time 10
+set-window-option -g mode-keys vi
+
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 bind-key C-space last-window
 
-setw -g mode-keys vi
-unbind [
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "kitty +kitten clipboard"
-# bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
-
-#bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-
 set-option -g history-limit 50000
-
-set -g default-terminal "screen-256color"
-#set -g default-terminal "xterm"
-#set -g default-command /bin/zsh
-#set -g default-shell /bin/zsh
-
-set-option -g mouse on
-#unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
-#bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
-
-
-# Middle click to paste from the clipboard
-unbind-key MouseDown2Pane
-bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
-
-# Drag to re-order windows
-bind-key -n MouseDrag1Status swap-window -t=
-
-# Set status bar
- set -g status-bg black
- set -g status-fg white
- set -g status-left ‘#[fg=green]#H’
-
-# Start numbering at 1
-set -g base-index 1
-
-# Allows for faster key repetition
-set -s escape-time 0
-
-# Set status bar
-set -g status-bg black
-set -g status-fg white
-set -g status-left ""
-set -g status-right "#[fg=green]#H"
-
-# Rather than constraining window size to the maximum size of any client
-# connected to the *session*, constrain window size to the maximum size of any
-# client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
-
-# Allows us to use C-a a <command> to send commands to a TMUX session inside
-# another TMUX session
-bind-key a send-prefix
-
-# Activity monitoring
-#setw -g monitor-activity on
-#set -g visual-activity on
-
-# Example of using a shell command in the status line
-#set -g status-right "#[fg=yellow]#(uptime | cut -d ',' -f 2-)"
-
-# Highlight active window
-# set-window-option -g window-status-current-bg red
-# mouse scroll
-# set-window-option -g mode-mouse on
-#set -ga terminal-overrides "xterm*:smcup@:rmcup@:*88col*:colors=88,*256col*:colors=256,xterm*:colors=256"
-set -ga terminal-overrides "screen-256color"
-#
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-# set-option -g status-attr default
+set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
 
 # default window title colors
-#set-window-option -g window-status-fg colour244 #base0
-#set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=colour244,bg=default #base0 and default
+#set-window-option -g window-status-style dim
 
 # active window title colors
-#set-window-option -g window-status-current-fg colour166 #orange
-#set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=colour166,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
 
 # pane border
-#set-option -g pane-border-fg colour235 #base02
-#set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-active-border-style fg=colour240 #base01
 
 # message text
-#set-option -g message-bg colour235 #base02
-#set-option -g message-fg colour166 #orange
+set-option -g message-style fg=colour166,bg=colour235 #orange and base02
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
@@ -106,6 +40,8 @@ set-option -g display-panes-colour colour166 #orange
 # clock
 set-window-option -g clock-mode-colour colour64 #green
 
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
 # tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
