--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,31 +7,50 @@ set -g prefix C-Space
 set-option -g focus-events on
 set-option -sg escape-time 10
 set-window-option -g mode-keys vi
+setw -g mode-keys vi
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 bind-key C-space last-window
 
 set-option -g history-limit 50000
+
+set -g default-terminal "screen-256color"
+
+# Drag to re-order windows
+bind-key -n MouseDrag1Status swap-window -t=
+
+# Set status bar
+ set -g status-bg black
+ set -g status-fg white
+ set -g status-left ‘#[fg=green]#H’
+
+# Start numbering at 1
+set -g base-index 1
+
+# Allows for faster key repetition
+set -s escape-time 0
+
+# Set status bar
+set -g status-bg black
+set -g status-fg white
+set -g status-left ""
+set -g status-right "#[fg=green]#H"
+bind-key a send-prefix
+
+
+set -ga terminal-overrides "screen-256color"
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
-set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
-
-# default window title colors
-set-window-option -g window-status-style fg=colour244,bg=default #base0 and default
-#set-window-option -g window-status-style dim
-
-# active window title colors
-set-window-option -g window-status-current-style fg=colour166,bg=default #orange and default
-#set-window-option -g window-status-current-style bright
-
-# pane border
-set-option -g pane-border-style fg=colour235 #base02
-set-option -g pane-active-border-style fg=colour240 #base01
-
-# message text
-set-option -g message-style fg=colour166,bg=colour235 #orange and base02
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
